# experimentsRS

./: Cargo.toml  README.md
examples/crunchify/: crunchify_1.rs
examples/genuary_2023/: genuary_2.rs  genuary_4.rs
examples/twister/: draped.rs  lines.rs  midi_twister_1.rs  midi_twister_2.rs
genuary_2023/: genuary_1.rs  genuary_2.rs  midi.rs  midi_twister_1.rs  midi_twister_2.rs  twister_constants.rs
random_and_noise/: m_1_1_01.rs
src/: lib.rs
src/midi/: mod.rs
src/midi/twister/: constants.rs
src/util/: mod.rs
