[package]
name = "sketches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
midir = "0.8.0"
wmidi = "4.0.6"

# Random and Noise
[[example]]
name = "m_1_1_01"
path = "random_and_noise/m_1_1_01.rs"

[[example]]
name = "genuary_1"
path = "genuary_2023/genuary_1.rs"

[[example]]
name = "genuary_2"
path = "genuary_2023/genuary_2.rs"

[[example]]
name = "genuary_4"
path = "genuary_2023/genuary_4.rs"

[[example]]
name = "twister_1"
path = "genuary_2023/midi_twister_1.rs"

[[example]]
name = "twister_2"
path = "genuary_2023/midi_twister_2.rs"

