[package]
name = "sketches"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.18"
midir = "0.8.0"
wmidi = "4.0.6"

[[example]]
name = "genuary_1"
path = "examples/genuary_2023/genuary_1.rs"

[[example]]
name = "genuary_2"
path = "examples/genuary_2023/genuary_2.rs"

[[example]]
name = "genuary_4"
path = "examples/genuary_2023/genuary_4.rs"

[[example]]
name = "twister_1"
path = "examples/twister/midi_twister_1.rs"

[[example]]
name = "twister_2"
path = "examples/twister/midi_twister_2.rs"

[[example]]
name = "lines"
path = "examples/twister/lines.rs"

[[example]]
name = "draped"
path = "examples/twister/draped.rs"
